--- a/ApplicationResource/ErrorMessage.en-US.resx
+++ b/ApplicationResource/ErrorMessage.en-US.resx
@@ -126,4 +126,7 @@
   <data name="E1003" xml:space="preserve">
     <value>Invalid businessperson</value>
   </data>
+  <data name="E1004" xml:space="preserve">
+    <value>Process request type not applied</value>
+  </data>
 </root>
