--- a/ApplicationResource/ProcessMessage.en-US.resx
+++ b/ApplicationResource/ProcessMessage.en-US.resx
@@ -129,4 +129,7 @@
   <data name="P104" xml:space="preserve">
     <value>Excel format for void allowance request</value>
   </data>
+  <data name="P501" xml:space="preserve">
+    <value>Xml format for cross border merchant invoice request</value>
+  </data>
 </root>
