--- a/ApplicationResource/ProcessMessage.resx
+++ b/ApplicationResource/ProcessMessage.resx
@@ -129,7 +129,19 @@
   <data name="P104" xml:space="preserve">
     <value>Excel格式作廢折讓單請求檔</value>
   </data>
+  <data name="P202" xml:space="preserve">
+    <value>Json格式作廢發票請求檔</value>
+  </data>
+  <data name="P203" xml:space="preserve">
+    <value>Json格式開立折讓單請求檔</value>
+  </data>
+  <data name="P204" xml:space="preserve">
+    <value>Json格式作廢折讓單請求檔</value>
+  </data>
   <data name="P501" xml:space="preserve">
     <value>Xml格式發票開立請求檔(境外電商)</value>
+  </data>
+  <data name="P601" xml:space="preserve">
+    <value>Json格式發票開立請求檔(境外電商)</value>
   </data>
 </root>
